# seat-allocator-cpp

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  resources.qrc  test.cpp
src/algorithm/: algorithm.cpp  algorithm.hpp  constraints.cpp  constraints.hpp
src/ui/: mainwindow.ui
src/utils/: constants.hpp  dynamic_bitset.hpp  utils.cpp  utils.hpp  utiltypes.hpp
src/widgets/: mainwindow.cpp  mainwindow.hpp
